--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "dist"
   ],
   "scripts": {
-    "start": "wix-node-build start",
-    "pretest": "wix-node-build lint && wix-node-build build",
+    "start": "yoshi start",
+    "pretest": "yoshi lint && yoshi build",
     "build": ":",
-    "test": "wix-node-build test",
-    "release": "wix-node-build release"
+    "test": "yoshi test",
+    "release": "yoshi release"
   },
   "dependencies": {
     "babel-runtime": "^6.22.0"
@@ -26,7 +26,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
-    "wix-node-build": "latest"
+    "yoshi": "latest"
   },
   "babel": {
     "presets": [
