--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>svg-2-react-icon</artifactId>
     <packaging>pom</packaging>
     <name>svg-2-react-icon</name>
-    <description>svg-2-react-icon</description>
+    <description>Generate React icon components from SVG raw files</description>
     <version>1.0.0-SNAPSHOT</version>
 
     <parent>
