--- a/package.json
+++ b/package.json
@@ -1,46 +1,57 @@
 {
-  "name": "svg-2-react-icon",
+  "name": "svg2react-icon",
   "version": "1.0.0",
   "author": {
     "name": "Itai Ben David",
     "email": "itaibd@wix.com",
     "url": ""
   },
-  "main": "dist/src/index.js",
-  "files": [
-    "dist"
-  ],
+  "license": "MIT",
+  "main": "src/index.js",
+  "bin": {
+    "svg2react-icon": "./src/index.js",
+    "svg2react-icon-once": "./src/build-once.js"
+  },
   "scripts": {
     "start": "yoshi start",
     "pretest": "yoshi lint && yoshi build",
     "build": ":",
-    "test": "yoshi test",
+    "test": "yoshi test --jest",
     "release": "yoshi release"
   },
   "dependencies": {
-    "babel-runtime": "^6.22.0"
+    "babel-runtime": "^6.22.0",
+    "cheerio": "^0.22.0",
+    "co": "^4.6.0",
+    "esformatter": "^0.10.0",
+    "esformatter-jsx": "^7.4.1",
+    "glob": "^7.1.1",
+    "lodash.camelcase": "^4.3.0",
+    "lodash.foreach": "^4.5.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "rimraf": "^2.6.1",
+    "svgo": "^0.7.2"
   },
-  "private": false,
   "devDependencies": {
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "chai": "^3.5.0",
     "yoshi": "latest"
   },
-  "babel": {
-    "presets": [
-      "es2015",
-      "stage-0"
-    ],
-    "plugins": [
-      "transform-runtime"
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css|less|scss)$": "identity-obj-proxy"
+    },
+    "testPathIgnorePatterns": [
+      "<rootDir>/dist/",
+      "<rootDir>/node_modules/"
     ]
   },
   "eslintConfig": {
-    "extends": "wix/esnext"
+    "extends": "wix/react",
+    "env": {
+      "jest": true
+    }
   },
   "publishConfig": {
-    "registry": "http://repo.dev.wix/artifactory/api/npm/npm-local/"
+    "registry": "https://registry.npmjs.org/"
   }
 }
