--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.wixpress.infra</groupId>
-    <artifactId>svg-2-react-icon</artifactId>
+    <artifactId>svg2react-icon</artifactId>
     <packaging>pom</packaging>
-    <name>svg-2-react-icon</name>
+    <name>svg2react-icon</name>
     <description>Generate React icon components from SVG raw files</description>
     <version>1.0.0-SNAPSHOT</version>
 
