--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
   },
   "license": "MIT",
   "main": "src/index.js",
+  "homepage": "https://github.com/wix/svg2react-icon",
   "bin": {
     "svg2react-icon": "./src/index.js",
     "svg2react-icon-once": "./src/build-once.js"
+  },
+  ,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wix/svg2react-icon"
+  },
+  "bugs": {
+    "url": "https://github.com/wix/svg2react-icon/issues"
   },
   "scripts": {
     "start": "yoshi start",
