--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "co": "^4.6.0",
     "esformatter": "^0.10.0",
     "esformatter-jsx": "^7.4.1",
+    "fs-extra": "^2.0.0",
     "glob": "^7.1.1",
     "lodash.camelcase": "^4.3.0",
     "lodash.foreach": "^4.5.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "rimraf": "^2.6.1",
     "svgo": "^0.7.2"
   },
   "devDependencies": {
