--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lodash.foreach": "^4.5.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "slash": "^1.0.0",
     "svgo": "^0.7.2"
   },
   "devDependencies": {
