--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "svg2react-icon",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "author": {
     "name": "Itai Ben David",
     "email": "itaibd@wix.com",
-    "url": ""
+    "url": "https://github.com/wix/svg2react-icon"
   },
   "license": "MIT",
   "main": "src/index.js",
@@ -30,7 +30,7 @@
   "dependencies": {
     "babel-runtime": "^6.22.0",
     "cheerio": "^0.22.0",
-    "co": "^4.6.0",
+    "commander": "^2.15.1",
     "esformatter": "^0.10.0",
     "esformatter-jsx": "^7.4.1",
     "fs-extra": "^2.0.0",
@@ -38,12 +38,13 @@
     "lodash.camelcase": "^4.3.0",
     "lodash.foreach": "^4.5.0",
     "prop-types": "^15.5.4",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "svgo": "^0.7.2"
+    "svgo": "^1.0.5"
   },
   "devDependencies": {
-    "haste-preset-yoshi": "latest"
+    "@types/react": "^15.6.15",
+    "haste-preset-yoshi": "latest",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   },
   "jest": {
     "moduleNameMapper": {
