Nissix "scope-packages" plugin

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "rimraf": "^3.0.2",
-    "yoshi": "^2.1.5"
+    "@wix/yoshi": "^2.1.5"
   },
   "jest": {
     "moduleNameMapper": {
